--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^1.5.0",
+		"@cloudflare/workers-types": "^4.20250607.0",
 		"@eslint/js": "^9.25.0",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
 		"@vitejs/plugin-react": "^4.4.1",
+		"alchemy": "^0.24.1",
+		"cloudflare": "^4.3.0",
 		"eslint": "^9.25.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
